[project]
name = "dmx-emulator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Luis Schuimer", email = "85784931+LuisSchuimer@users.noreply.github.com" }
]
dependencies = [
    "flask>=3.1.0",
    "waitress>=3.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dmx_emulator"]
